--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,17 @@
 {
   "extends": "@antfu",
   "rules": {
-    "@typescript-eslint/comma-dangle":"off"
+    "curly": "off",
+    "@typescript-eslint/brace-style": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "vars": "local",
+        "args": "none",
+        "ignoreRestSiblings": true,
+        "caughtErrors": "none"
+      }
+    ],
+    "@typescript-eslint/comma-dangle": "off"
   }
-
 }
